--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -37,7 +37,7 @@
 
   <div class="form-group">
     <input type="text" id="ca" name="name">
-      <button type="submit">SUMBIT</button>
+      <button type="submit">SUBMIT</button>
 
   </div>
 
