--- a/views/partials/burgers/burger-block.handlebars
+++ b/views/partials/burgers/burger-block.handlebars
@@ -1,9 +1,9 @@
 <li>
 	{{burger_name}}
 
-	<button class="change-devour" data-id="{{id}}" data-newdevor="{{devour}}">
-		{{#if devor}}DEVOUR IT{{else}}DEVOURED!{{/if}}
+	<button class="change-devour" data-id="{{id}}" data-newdevour="{{devour}}">
+		{{#if devour}}DEVOUR IT{{else}}DEVOURED!{{/if}}
 	</button>
 
-	<button class="delete-devour" id="righthead" data-id="{{this.id}}">DELETE!</button>
+	<button class="delete-devour" data-id="{{this.id}}">DELETE!</button>
 </li>
