--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -65,8 +65,8 @@ li {
     font-size: 4.5rem;
     margin-top: 50px;
   }
- h6 {
+ /* h6 {
    text-align: center;
    margin-right:50px;
    margin-bottom: 50px;
- }
+ } */
