--- a/views/partials/burgers/burger-block.handlebars
+++ b/views/partials/burgers/burger-block.handlebars
@@ -5,5 +5,5 @@
 		{{#if devour}}DEVOUR IT{{else}}DEVOURED!{{/if}}
 	</button>
 
-	<button class="delete-devour" data-id="{{this.id}}">DELETE!</button>
+	{{!-- <button class="delete-devour" data-id="{{this.id}}">DELETE!</button> --}}
 </li>
