--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -1,7 +1,7 @@
 <div class="body">
 
 <h1 id="head">Da-Burger</h1>
-<p id="tag">Devour all you want.</p>
+<p id="tag">Devour all you want .</p>
 {{!-- <img src="/assets/img/hamburger_53876-25481.jpg"; --}}
 
 
@@ -34,17 +34,18 @@
 </div>
 
 
-{{!-- <h2>Add a Cat</h2> --}}
 <form class="create-form">
 
   <div class="form-group">
     <input type="text" id="ca" name="name">
       <button id="submit" type="submit">SUBMIT</button>
   </div>
+  <h6 id="statement">Enter the name of burger you'd like to eat.</h6>
 
   <div class="form-group">
     <input type="radio" name="devoured" value="0" checked><br>
     <input type="radio" name="devoured" value="1">
   </div>
-  <H6>Enter the name of burger you'd like to eat.</H6>
+  <img id="softdrink" src="/assets/img/devourdrink.png" width="210">
+
 </form>
