--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -1,6 +1,6 @@
 .body {
   background-color: #8fbbbc;
-  height: 600px;
+  height: 935px;
   position: relative;
 }
 
@@ -11,7 +11,7 @@ li {
     height: 80px;
     margin-left: 40px;
     padding:15px;
-    margin-top: 40px;
+    margin-top: 27px;
   }
   
   .label {
@@ -21,7 +21,9 @@ li {
   /* ///INPUT FORM */
   #ca {
     width:400px;
-    margin-left: 500px;
+    margin-left: 450px;
+    margin-top:50px;
+  
   }
 
   ul {
@@ -62,18 +64,32 @@ li {
   }
   #tag {
     top: 195px;
-    left: 690px;
+    left: 616px;
     color: white;
     /* font-family: 'Raleway: 200i', sans-serif; */
-    font-family: 'Raleway' 'italic', sans-serif;
+    font-family: 'Raleway', sans-serif;
     position: absolute;
-    font-size: 17px;
+    font-size: 16px;
+    font-style: italic;
 
   }
- h6 {
+ #statement {
    text-align: center;
    margin-right:50px;
-   margin-bottom: 50px;
+   margin-bottom: 55px;
+   font-size: 15px;
    font-family: 'Raleway', sans-serif;
    color: white;
+   
+ }
+ .col-md-6 {
+   padding-top: 90px;
+ }
+ .form-group {
+   /* padding: 5px; */
+ }
+ #softdrink {
+   position: absolute;
+   top: 740px;
+   right: 340px;
  }
