--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -1,5 +1,5 @@
 <div class="body">
-
+<div class="head-content">
 <h1 id="head">Da-Burger</h1>
 <p id="tag">Devour all you want .</p>
 {{!-- <img src="/assets/img/hamburger_53876-25481.jpg"; --}}
@@ -46,6 +46,25 @@
     <input type="radio" name="devoured" value="0" checked><br>
     <input type="radio" name="devoured" value="1">
   </div>
-  <img id="softdrink" src="/assets/img/devourdrink.png" width="210">
+  </form>
 
-</form>
+  <div class="images">
+  <img id="softdrink" src="/assets/img/devourdrink.png" width="230">
+    <a href="https://www.freepik.com/free-vector/fast-food-designs-collection_1076585.htm"><img id="burgerIcon" src="/assets/img/burger.png" width="230"></a>
+      <a href="https://www.freepik.com/free-vector/set-funny-monsters-flat-style_1958109.htm"><img id="monster" src="/assets/img/monster.png" width="195"></a>
+      </div>
+  <div class="empty"></div>
+<div class="headline">
+        <div class="application">
+          <h2>Da-Burger Application</h2>
+          <hr>
+          <p id="paragraph">This project demonstrates a basic full stack application ith a front end implemented
+            with HTML/CSS from<br>the framework and the backend implemented with Node.js and Express. HTML templating is rendered
+            with the help of Handlebars.<br> When you place an order, the burger you enter in the form field is added to the new burger entry into
+            the MYSQL database.<br>
+
+          </p>
+          </div>
+
+          </div>
+          </div>
