--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -1,4 +1,4 @@
-.body {
+.head-content {
   background-color: #8fbbbc;
   height: 935px;
   position: relative;
@@ -21,7 +21,7 @@ li {
   /* ///INPUT FORM */
   #ca {
     width:400px;
-    margin-left: 450px;
+    margin-left: 499px;
     margin-top:50px;
   
   }
@@ -31,24 +31,25 @@ li {
   }
 
   .change-devour{
-    background-color: whitesmoke;
+    background-color: #F0F0F0;
     color: black;
     font-size:12px;
     text-shadow: 1px 1px #BEBEBE;
   }
   
   .delete-devour {
-    background-color: red;
-    color: white;
+    background-color: #E0E0E0;
+    text-shadow: 1px 2px #BEBEBE;
+    color: black;
     font-size:12px;
   }
   
   #submit {
-    background-color: #ff0080;
+    background-color: #d3419d;
     color: white;
     border-radius: 30px;
     font-family: 'Roboto', sans-serif;
-
+    list-style: none;
   }
   input[type="radio"]  {
     display: none;
@@ -60,15 +61,19 @@ li {
     font-family: 'Pacifico', cursive;
     letter-spacing: 0.5px;
     font-size: 64px;
-    padding-top: 120px;
+    padding-top: 129px;
+
   }
   #tag {
-    top: 195px;
-    left: 616px;
-    color: white;
+    text-align: center; 
+    margin-right: 39px;
+    margin-top:20px;
+    /* top: 195px; */
+    /* left: 616px; */
+    color: wheat;
     /* font-family: 'Raleway: 200i', sans-serif; */
     font-family: 'Raleway', sans-serif;
-    position: absolute;
+    /* position: absolute; */
     font-size: 16px;
     font-style: italic;
 
@@ -92,4 +97,35 @@ li {
    position: absolute;
    top: 740px;
    right: 340px;
+ }
+ #burgerIcon{
+   position: absolute;
+   top: 990px;
+   right:420px;
+
+ }
+ #monster {
+   position: absolute;
+   top: 950px;
+   right: 600px;
+ }
+ .empty {
+   height: 450px;
+   
+ }
+ h2 {
+   color: #A8A8A8;
+   text-align: center;
+   padding-bottom:30px;
+   
+ }
+ #paragraph {
+   color: #A8A8A8;
+   text-align: center;
+   line-height: 30px;
+ }
+ hr {
+   margin-left:450px;
+   margin-right: 450px;
+   margin-bottom: 30px;
  }
