--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -5,8 +5,8 @@
 		<link  href="/assets/css/style.css" rel="stylesheet" type="text/css">
 		<title>Devour it!</title>
 		{{!-- links section --}}
-		<link href="https://fonts.googleapis.com/css?family=Raleway&display=swap" rel="stylesheet">
 		<link href="https://fonts.googleapis.com/css?family=Pacifico&display=swap" rel="stylesheet">
+		<link href="https://fonts.googleapis.com/css?family=Roboto:500&display=swap" rel="stylesheet">
 		<link href="https://fonts.googleapis.com/css?family=Ranga&display=swap" rel="stylesheet">
 		{{!-- bootstrap link --}}
 		<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
