--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -55,16 +55,29 @@
       </div>
   <div class="empty"></div>
 <div class="headline">
+
         <div class="application">
+          <div class="col-md-12">
           <h2>Da-Burger Application</h2>
           <hr>
-          <p id="paragraph">This project demonstrates a basic full stack application ith a front end implemented
-            with HTML/CSS from<br>the framework and the backend implemented with Node.js and Express. HTML templating is rendered
+          <p id="paragraph">This project demonstrates a basic full stack application with a front-end implemented
+            with HTML/CSS from<br>the framework and the back-end implemented with Node.js and Express. HTML templating is rendered
             with the help of Handlebars.<br> When you place an order, the burger you enter in the form field is added to the new burger entry into
-            the MYSQL database.<br>
-
+            the MYSQL database.<br> The burger entry is added to the burgers to Devour section on the left side of the screen. The user may<br>
+            then eat any burger by clicking on it, which moves it into the column and updates its status accordingly in the database.
+            <br>
+            <br>
+            <p id="thirdTag">Enjoy and have a burger on us!</p>
           </p>
           </div>
 
+          <div class="wrapper">
+    <footer class="page-footer">Da-Burger</footer>
+      {{!-- <p id="secondTag">Eat all you want</p> --}}
+
+    </footer>
+    </div>
+
           </div>
           </div>
+
